--- a/index.html
+++ b/index.html
@@ -22,44 +22,41 @@
     <div class="bg-top-height bg-setup"></div>
     <div class="aot"></div>
     <div class="bg-height bg-setup"></div>
-
-    <div class="sticky">
-        <div class="wrapper">
-            <div class="shopping-card-container">
-                <div class="shopping-card">
-                    <h1>Warenkorb</h1>
-                    <div class="shopping-card-content">
-                        <div class="shopping-card-flex">
-                            <h6>Icon</h6>
-                            <div class="delivery-case-content">
-                                <p>Lieferung</p>
-                                <p>24-45 min</p>
-                            </div>
-                        </div>
-                        <div class="shopping-card-flex">
-                            <h6>Icon</h6>
-                            <div class="delivery-case-content">
-                                <p>Abholung</p>
-                                <p>15 min</p>
+    <section>
+        <div class="filter-container container">
+            <div class="wrapper">
+                <div class="grid">
+                    <main>
+                        <div id="cards-container-id" class="cards-container"></div>              
+                    </main>
+                    <div class="shopping-card-container"> 
+                        <div class="shopping-card">
+                            <h1>Warenkorb</h1>
+                            <div class="shopping-card-content">
+                                <div class="delivery-case-flex">
+                                    <div class="shopping-card-flex">
+                                        <h6>Icon</h6>
+                                        <div class="delivery-case-content">
+                                            <p>Lieferung</p>
+                                            <p>24-45 min</p>
+                                        </div>
+                                    </div>
+                                    <div class="shopping-card-flex">
+                                        <h6>Icon</h6>
+                                        <div class="delivery-case-content">
+                                            <p>Abholung</p>
+                                            <p>15 min</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="order-container-id" class="order-container"></div>
+                                <div id="pay-info-container-id" class="pay-info-container d-none"></div>
                             </div>
                         </div>
                     </div>
-                    <div id="order-container-id" class="order-container"></div>
-                    <div id="pay-info-container-id" class="pay-info-container d-none"></div>
                 </div>
-
             </div>
-
         </div>
-
-    </div>
- 
-    <section>  
-        <main>
-            <div class="filter-container">
-                <div id="cards-container-id" class="cards-container"></div>              
-            </div>
-        </main>
     </section>
 </body>
 </html>
