--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./img/fav.png">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -16,7 +17,6 @@
             <li><a href="#">test</a></li>
             <li><a href="#">test</a></li>
             <li><a href="#">test</a></li>
-            
         </ul>
     </nav>
     <div class="bg-top-height bg-setup"></div>
@@ -27,9 +27,11 @@
             <div class="wrapper">
                 <div class="grid">
                     <main>
-                        <div id="cards-container-id" class="cards-container"></div>              
+                        <div id="cards-container1-id" class="cards-container"></div>  
+                        <div id="cards-container2-id" class="cards-container"></div>          
                     </main>
-                    <div class="shopping-card-container"> 
+                 
+                    <div class="shopping-card-container media"> 
                         <div class="shopping-card">
                             <h1>Warenkorb</h1>
                             <div class="shopping-card-content">
