--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
     <nav>
         <img src="./img/Pizza_brain_trans.png" alt="">
         <ul>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
-            <li><a href="#">test</a></li>
+            <li><a href="#">Option 1</a></li>
+            <li><a href="#">Option 2</a></li>
+            <li><a href="#">Option 3</a></li>
+            <li><a href="#">Option 4</a></li>
+            <li><a href="#">Option 5</a></li>
         </ul>
     </nav>
+
     <div class="bg-top-height bg-setup"></div>
     <div class="aot"></div>
     <div class="bg-height bg-setup"></div>
     <section>
         <div class="filter-container container">
             <div class="wrapper">
+            
                 <div class="grid">
                     <main>
                         <div id="cards-container1-id" class="cards-container"></div>  
@@ -64,9 +66,10 @@
  
         <div class="wrapper-btn">
             <div id="show-open-btn-id" class="pay-info-mobile">
-                <button onclick="toggleMobileShoppingCard(true)">Warenkorb</button>
+                <button  onclick="toggleMobileShoppingCard(true)">Warenkorb</button>
+                <span id="food-counter-id">0</span>
             </div>
-            <div id="show-close-btn-id" class="pay-info-mobile d-none">
+            <div id="show-close-btn-id" class="pay-info-mobile-close d-none">
                 <button onclick="toggleMobileShoppingCard(false)">Warenkorb schließen</button>
             </div>
         </div>
