--- a/index.html
+++ b/index.html
@@ -18,11 +18,22 @@
             <li><a href="#">Option 4</a></li>
             <li><a href="#">Option 5</a></li>
         </ul>
-    </nav>
+        <a class="about-us-container" href="">about us</a>
 
-    <div class="bg-top-height bg-setup"></div>
+        <a id="burder-menu-a-id" class="burger-menu" onclick="openDropdown()">
+            <img id="burder-menu-id" class="burger-menu" src="./img/menu-bar-icon.png" >
+        </a>
+    </nav>
+    <div id="droppdown-id" class="droppdown">
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li><a href="#">Option 3</a></li>
+        <li><a href="#">Option 4</a></li>
+        <li><a href="#">Option 5</a></li>
+        <li><a href="">about us</a></li>
+        
+    </div>
     <div class="aot"></div>
-    <div class="bg-height bg-setup"></div>
     <section>
         <div class="filter-container container">
             <div class="wrapper">
@@ -59,6 +70,12 @@
                         </div>
                     </div>
                     <div id="mobile-popup-bg-id" class="mobile-popup-bg d-none"></div>
+                    <div id="order-popup-id"  class="popup-bg d-none">
+                        <div class="popup">
+                            <p>Vielen Dank für Ihre Bestellung, es handelt sich hierbei um eine Testbestellung.</p> 
+                            <p>Das Fenster schleißt sich  in 3 Sekunden. </p>
+                        </div>
+                    </div>
                    
                 </div>
             </div>
