info delivery logic ready

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./img/fav.png">
-    <title>Document</title>
+    <title>Bizzarro Bello</title>
     <link rel="stylesheet" href="style.css">
     <script src="./js/script.js"></script>
     <script src="./js/data.js"></script>
@@ -92,7 +92,8 @@
                                     </div>
                                 </div>
                                 <div id="order-container-id" class="order-container"></div>
-                                <div id="pay-info-container-id" class="pay-info-container d-none"></div>
+                                <div id="min-order-value-container-id" class="min-order-value-container"></div>
+                                <div id="pay-info-container-id" class="d-none"></div>
                             </div>
                         </div>
                     </div>
