--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./js/script.js"></script>
     <script src="./js/data.js"></script>
     <script src="./js/template.js"></script>
+    <script src="./js/helperFunc.js"></script>
 </head>
 <body onload="init()"> 
     <nav>
@@ -104,7 +105,6 @@
                             <p>Das Fenster schleißt sich  in 3 Sekunden. </p>
                         </div>
                     </div>
-                   
                 </div>
             </div>
         </div>
