--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#">Option 4</a></li>
             <li><a href="#">Option 5</a></li>
         </ul>
-        <a class="about-us-container" href="">about us</a>
+        <a class="about-us-container" href="#">about us</a>
 
         <a id="burder-menu-a-id" class="burger-menu" onclick="openDropdown()">
             <img id="burder-menu-id" class="burger-menu" src="./img/menu-bar-icon.png" >
