menu scrolling by click

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div id="pizza-section"></div>
+                        <div id="pizza-section" class="pizzas"></div>
                         <div id="cards-container1-id" class="cards-container"></div> 
-                        <div id="dessert-section"></div> 
+                        <div id="dessert-section" class="desserts"></div> 
                         <div id="cards-container2-id" class="cards-container"></div>   
-                        <div id="drinks-section"></div>    
+                        <div id="drinks-section" class="drinks"></div>    
                         <div id="cards-container3-id" class="cards-container margin-bottom"></div>     
                     </main>
                  
